Se agrego un articulo

--- a/about.html
+++ b/about.html
@@ -90,8 +90,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
-                    </div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; Crianza sana Futuro Feliz 2024</div>
                 </div>
             </div>
         </footer>
