Se agrego un boton en las categorias de bebes e infantes para regresar a la pgaina con totodos los articulos de cada uno

--- a/bebes_salud.html
+++ b/bebes_salud.html
@@ -136,7 +136,9 @@
                 <hr class="my-4" />
 
                     <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Más artículos →</a></div>
+                    <div class="contenedor_botones">
+                        <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="./bebes.html">← Atrás</a></div>
+                    </div>
                 </div>
             </div>
         </div>
