--- a/infantes_salud.html
+++ b/infantes_salud.html
@@ -132,8 +132,12 @@
                             el 8 de Abril, 2024
                         </p>
                     </div>
+                    <!-- Divider-->
+                    <hr class="my-4" />
                     <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Más Articulos →</a></div>
+                    <div class="contenedor_botones">
+                        <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="./infantes.html">← Atrás</a>
+                    </div>
                 </div>
             </div>
         </div>
