--- a/bebes_nutricion.html
+++ b/bebes_nutricion.html
@@ -135,7 +135,9 @@
                     <!-- Divider-->
                     <hr class="my-4" />
                     <!-- Pager-->
-                    
+                    <div class="contenedor_botones">
+                        <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="./bebes.html">← Atrás</a></div>
+                    </div>
             </div>
         </div>
         <!-- Footer-->
