--- a/infantes_desarrollo.html
+++ b/infantes_desarrollo.html
@@ -136,7 +136,9 @@
                     <!-- Divider-->
                     <hr class="my-4" />
                     <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Más Articulos →</a></div>
+                    <div class="contenedor_botones">
+                        <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="./infantes.html">← Atrás</a>
+                    </div>
                 </div>
             </div>
         </div>
