--- a/infantes_nutricion.html
+++ b/infantes_nutricion.html
@@ -133,8 +133,13 @@
                             el 8 de Abril, 2024
                         </p>
                     </div>
+                      <!-- Divider-->
+                      <hr class="my-4" />
                     <!-- Pager-->
-                    
+                    <div class="contenedor_botones">
+                        <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="./infantes.html">← Atrás</a>
+                    </div>
+                    </div>
             </div>
         </div>
         <!-- Footer-->
