Se agregaron fotos a los articulos

--- a/Estrategias_disciplina_por_edad.html
+++ b/Estrategias_disciplina_por_edad.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+        <header class="masthead" style="background-image: url('./assets/img/padre-con-bebe_img.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -58,7 +58,6 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <img src="./assets/img/padre-con-bebe_img.jpg" alt="padre cargando a su bebé">
                         <p>Todos hemos visto estas escenas: el niñito malcriado tirándole arena a los demás en el parque; el lloroncito de 3 años que no se calla hasta que sus padres le compran un dulce; la niña de 5 años que grita "¡porque no quiero!" en el restaurante.
                         </p>
                         <p>Y hemos mirado a sus padres con cierto desdén, seguros de que nosotros nos portaríamos de manera muy diferente si nuestros hijos se estuvieran portando de tan espeluznante manera.
