--- a/agresividad.html
+++ b/agresividad.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+        <header class="masthead" style="background-image: url('./assets/img/agresividad_img.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -58,7 +58,6 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <img src="./assets/img/agresividad_img.jpg" alt="niños enojados">
                         <h2>¿Por qué a veces son tan agresivos los niños?
                         </h2>
                         <p>Aunque quizás no te lo creas, la agresión es una parte normal del desarrollo de un niño. Muchos niños, de vez en cuando agarran los juguetes de sus compañeros de clase, pegan a los demás, dan patadas o gritan hasta ponerse colorados.
