--- a/guia_alimentar_12-24.html
+++ b/guia_alimentar_12-24.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+        <header class="masthead" style="background-image: url('./assets/img/bebe-comiendo_img.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -58,7 +58,6 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <img src="./assets/img/bebe-comiendo_img.jpg" alt="bebé comiendo">
                         <p>Usa esta guía para averiguar qué y cuánto darle de comer a tu hijo de 12 a 24 meses. (Consulta nuestro artículo sobre bebés para ver la guía sobre la alimentación de niños menores de 12 meses. Si tu hijo es más gradencito, consulta la guía para niños de 24 a 36 meses).
                         </p>
                         <p>No te preocupes si tu hijo come más o menos de lo que dice en la guía: son solo pautas generales. De hecho, es posible que tu niño incluso coma menos de lo que antes comía, lo cual es perfectamente normal para su edad.
