--- a/menu_1año.html
+++ b/menu_1año.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+        <header class="masthead" style="background-image: url('./assets/img/bebe-comiendo2_img.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -58,7 +58,6 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <img src="./assets/img/bebe-comiendo2_img.jpg" alt="bebe comiendo">
                         <p>Tu niño ya puede comer casi de todo, aunque debes seguir vigilando los pedazos de alimentos pequeños. Para esta edad ya le estará diciendo adiós al biberón, si lo toma, aunque también es posible que le esté costando trabajo dejarlo.
                         </p>
                         <p>Que pueda comer de todo, no quiere decir que vaya a comer de todo. De hecho, a esta edad no es infrecuente que tu niño sea melindroso para comer. Es posible que la textura de ciertos alimentos sólidos no le guste demasiado o incluso que simplemente se rehúse a comer.
