--- a/menu_2-3años.html
+++ b/menu_2-3años.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+        <header class="masthead" style="background-image: url('./assets/img/niña_2-3años_comiendo_img.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -58,7 +58,6 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <img src="./assets/img/niña_2-3años_comiendo_img.jpg" alt="niña con manzana">
                         <p>Un niño de esta edad necesita entre 1,000 y 1,200 calorías diariamente (dependiendo de su nivel de actividad), que probablemente será más o menos la mitad de lo que tú comes al día.
                         </p>
                         <p>Aunque lo veas ya mucho más grande que hace unos meses, las porciones que come al día un niño de entre 2 y 3 años, siguen siendo relativamente pequeñas. Si las comparas, verás que no aumentan mucho con la edad.
