--- a/menu_4-5años.html
+++ b/menu_4-5años.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+        <header class="masthead" style="background-image: url('./assets/img/niña4-5años_comiendo_img.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -58,7 +58,6 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <img src="./assets/img/niña4-5años_comiendo_img.jpg" alt="niña comiendo">
                         <p>¿Has notado que tu hijo ya se porta más como una ?personita?? En esta edad es cuando empiezan a tener comportamientos más adultos y eso se puede reflejar en que tus comidas en familia sean más tranquilas y agradables.
                         </p>
                         <p>Quizás tu hijo todavía es melindroso para comer y no quiere probar los vegetales (pero le encanta la comida chatarra). Sin embargo insiste en incluir alimentos saludables en su dieta. Ahora empieza a necesitar más fibra y nutrientes y aprender a comer de forma saludable evitará el inicio de los problemas de obesidad, que son tan comunes entre los niños de hoy en día.</p>
