--- a/no_llores.html
+++ b/no_llores.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+        <header class="masthead" style="background-image: url('./assets/img/no-llores_img.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -58,7 +58,6 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <img src="./assets/img/no-llores_img.jpg" alt="niña llorando">
                         <p>¿Cómo describirías el llanto de un niño? ¿Necesario? ¿Manipulador? ¿Desagradable? ¿Enternecedor? Sea cual sea tu respuesta, el llanto es una función tan natural al ser humano que se puede desencadenar en cualquier momento, por cualquier emoción o circunstancia. Hoy propongo que veamos el llanto como un recurso exquisito, un océano dulce de contemplación.
                         </p>
                         <p>Si eres madre o padre, es muy probable que experimentes momentos de suspenso ante el posible llanto de tus hijos. Quizá ya eres experto en descifrar un llanto emocional, o distinguir las lágrimas del dolor, hambre o incomodidad. Dependiendo de la edad de tus hijos, quizá ya tengas todo un estuche de estrategias que funcionan para calmar todo tipo de llantos. Es posible que te hayas decidido por no dejar llorar a tu recién nacido por mucho tiempo, y a tu niño más grande brindarle espacio para desahogar sus lágrimas. ¡Todo esto es algo muy positivo!
