--- a/about.html
+++ b/about.html
@@ -52,9 +52,8 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p>   Nuestra misión es proporcionar información confiable y accesible a través de nuestra página web dedicada al cuidado infantil. Nos esforzamos por ofrecer recursos actualizados sobre nutrición, salud y desarrollo infantil, diseñados para apoyar a padres y cuidadores en cada etapa crucial del crecimiento de sus pequeños. Estamos comprometidos con la creación de contenido que sea informativo, útil y fácil de navegar, asegurando así que las familias puedan tomar decisiones informadas y cuidar mejor a sus bebés.
+                              </p>
                     </div>
                 </div>
             </div>
